# kinect_fusion

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  eigen.BUILD
data/rgbd_dataset_freiburg1_desk/processed/: cameras.npz  raw_poses.npz
opengl/: BUILD.bazel  main.cpp
src/: main.cpp
src/helpers/: BUILD.bazel  Eigen.h  FreeImageHelper.h  VirtualSensor.h  matrix.cpp  matrix.h  octree.cpp  octree.hpp  quadtree.cpp
src/helpers/test/: BUILD.bazel  octree_test.cpp
src/icp/: ICP.cpp  ICP.h  ICP2.cpp
src/icp/benchmark/: BUILD.bazel  benchmark.cc
src/models/: BUILD.bazel  Frame.cpp  Frame.h  MarchingCubes.h  SimpleMesh.h  Volume.cpp  Volume.h  volume_integrate_cpu.cpp
src/models/benchmark/: BUILD.bazel  benchmark.cc
src/models/test/: BUILD.bazel  volume_test.cpp
src/raycaster/: RayCaster.cpp  Raycaster.cpp  Raycaster.h  ray.cpp  ray.h  raycaster.cpp  raycaster.h
src/renderer/: Renderer.cpp  Renderer.h
src/vuh/: BUILD.bazel  Makefile
src/vuh/src/: Makefile  main.cpp
src/vuh/test/shaders/: saxpy.comp  saxpy.spv
