
cc_binary(
    name = "kinect_fusion", 
    includes = [
        "src/icp",
        "src/helpers",
        "src/models",
        "src/raycaster",
        "src/renderer",
        "libgens/eigen", 
    ],
    srcs = [
        "src/main.cpp",
        # "src/models/Frame.h",
        # "src/models/Frame.cpp",
        # "src/models/MarchingCubes.h",
        # "src/models/SimpleMesh.h",
        # "src/models/Volume.h",
        # "src/models/Volume.cpp",
        "src/raycaster/ray.h",
        "src/raycaster/ray.cpp",
        "src/raycaster/raycaster.h",
        "src/raycaster/raycaster.cpp",
        "src/icp/ICP.h", 
        "src/icp/ICP.cpp",
        "src/icp/ICP2.cpp",
        # "src/helpers/Eigen.h",
        # "src/helpers/VirtualSensor.h",
        # "src/helpers/FreeImageHelper.h",
        # "src/helpers/FreeImageHelper.cpp",
        # "src/helpers/matrix.h",
        # "src/helpers/matrix.cpp",
        "src/renderer/Renderer.h",
        "src/renderer/Renderer.cpp",
        ],
    deps = [
        "@eigen",
        "//src/helpers:helpers",
        "//src/helpers:octree",
        "//src/models:volume",
        "//src/models:models",
    ],
    linkopts = [ 
        "-lfreeimage",
        "-lSDL2",
        "-lGL",
        "-lGLU",
        ],
)