
cc_library(
    name = "matrix",
    hdrs = [
        "matrix.h",
    ],
    srcs = [
        "matrix.cpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "helpers",
    srcs = [
        "FreeImageHelper.cpp",
        "FreeImageHelper.h",
        "VirtualSensor.h",
    ],
    hdrs = [
        "Eigen.h",
    ],
    deps = [
        "//src/helpers:matrix",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "octree",
    srcs = [
        "octree.cpp",
        "octree.hpp",
    ],
    includes = [
        ".", 
    ],
    deps = [
    ],
    visibility = ["//visibility:public"],
)
